{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 132,
  "lineage": "7cd7aa13-568d-d8ee-b489-9040ac9e3fb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gs_hack_education",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/edu20210827051331313300000002/2dae98e1492b18b9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener-rule/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c/84b5e4caa7cf4e34",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/edu/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener-rule/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c/84b5e4caa7cf4e34",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_acm_certificate.api",
            "aws_acm_certificate_validation.api_cert",
            "aws_route53_record.api_cert_validation",
            "aws_route53_zone.gs_hack",
            "module.lb.aws_lb.this",
            "module.lb.aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "module.lb.aws_lb_listener.frontend_https",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gs_hack_finnproducts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210827051331314300000003/e33efb5f50ebab11",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener-rule/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c/629d896d2684233e",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/finn/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener-rule/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c/629d896d2684233e",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.lb.aws_lb_target_group.main",
            "module.vpc.aws_vpc.this",
            "aws_acm_certificate.api",
            "aws_acm_certificate_validation.api_cert",
            "module.lb.aws_lb.this",
            "module.lb.aws_lb_listener.frontend_https",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_route53_record.api_cert_validation",
            "aws_route53_zone.gs_hack"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gs_hack_user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/user20210827051331311300000001/727da9387d6ec13d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener-rule/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c/8b037eb44d5faf0d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/user/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener-rule/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c/8b037eb44d5faf0d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb_listener.frontend_https",
            "module.lb.aws_lb_target_group.main",
            "module.vpc.aws_vpc.this",
            "aws_acm_certificate_validation.api_cert",
            "aws_route53_record.api_cert_validation",
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_acm_certificate.api",
            "aws_route53_zone.gs_hack",
            "module.lb.aws_lb.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:security-group/sg-04c95215847439012",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c95215847439012",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "gs-hack-alb_sg",
            "name_prefix": "",
            "owner_id": "809247286407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gs-hack-alb_sg"
            },
            "tags_all": {
              "Name": "gs-hack-alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:security-group/sg-0cc6008d71e09693b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc6008d71e09693b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gs-hack-allow_ssh",
            "name_prefix": "",
            "owner_id": "809247286407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gs-hack-allow_ssh_pub"
            },
            "tags_all": {
              "Name": "gs-hack-allow_ssh_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_entry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:security-group/sg-0f16161bc0582a7d7",
            "description": "Allow SSH and ALB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f16161bc0582a7d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Container Port from LB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c95215847439012"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c95215847439012"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from LB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc6008d71e09693b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gs-hack-cluster_entry",
            "name_prefix": "",
            "owner_id": "809247286407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gs-hack-cluster_entry"
            },
            "tags_all": {
              "Name": "gs-hack-cluster_entry"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_pub",
            "module.vpc.aws_vpc.this",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:security-group/sg-04f58a2767ec85246",
            "description": "Allow all inbound traffic from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f58a2767ec85246",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH only from internal VPC clients",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc6008d71e09693b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gs-hack-private_from_bastion",
            "name_prefix": "",
            "owner_id": "809247286407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gs-hack-private_from_bastion"
            },
            "tags_all": {
              "Name": "gs-hack-private_from_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_pub",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:security-group/sg-0c95998bdae389aba",
            "description": "Allow SSH and ALB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c95998bdae389aba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP to VPC Endpoint",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f16161bc0582a7d7"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS to VPC Endpoint",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f16161bc0582a7d7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gs-hack-ssm_private",
            "name_prefix": "",
            "owner_id": "809247286407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gs-hack-ssm_private"
            },
            "tags_all": {
              "Name": "gs-hack-ssm_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.allow_ssh_pub",
            "aws_security_group.cluster_entry",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secret_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:vpc-endpoint/vpce-07de4a857048a7ebb",
            "id": "vpce-07de4a857048a7ebb",
            "owner_id": "809247286407",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c95998bdae389aba"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "aws_security_group.cluster_entry",
            "aws_security_group.ssm_private",
            "data.aws_vpc_endpoint_service.secret_manager",
            "module.vpc.aws_vpc.this",
            "aws_security_group.alb_sg",
            "aws_security_group.allow_ssh_pub"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "gs-hack-access-logs",
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/app/gs-hack-gs-lb/4cca6fc5e585b675",
            "arn_suffix": "app/gs-hack-gs-lb/4cca6fc5e585b675",
            "dns_name": "gs-hack-gs-lb-595030492.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/app/gs-hack-gs-lb/4cca6fc5e585b675",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gs-hack-gs-lb",
            "security_groups": [
              "sg-04c95215847439012"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020a59fb618168419"
              },
              {
                "subnet_id": "subnet-078ab8171bc7628bf"
              }
            ],
            "subnets": [
              "subnet-020a59fb618168419",
              "subnet-078ab8171bc7628bf"
            ],
            "tags": {
              "Name": "gs-hack-gs-lb"
            },
            "tags_all": {
              "Name": "gs-hack-gs-lb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-08c3c16207273649a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/6213b4adb13a4b69",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/6213b4adb13a4b69",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/app/gs-hack-gs-lb/4cca6fc5e585b675",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.this",
            "module.lb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c",
            "certificate_arn": "arn:aws:acm:us-east-1:809247286407:certificate/082088aa-1c22-4557-aa19-3b3ec450dd26",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210827051331314300000003/e33efb5f50ebab11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/app/gs-hack-gs-lb/4cca6fc5e585b675/ebb5ba4a134e248c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/app/gs-hack-gs-lb/4cca6fc5e585b675",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "aws_acm_certificate.api",
            "aws_route53_record.api_cert_validation",
            "module.vpc.aws_subnet.public",
            "module.lb.aws_lb.this",
            "module.lb.aws_lb_target_group.main",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_acm_certificate_validation.api_cert",
            "aws_route53_zone.gs_hack",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210827051331314300000003/e33efb5f50ebab11",
            "arn_suffix": "targetgroup/finn20210827051331314300000003/e33efb5f50ebab11",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210827051331314300000003/e33efb5f50ebab11",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "finn20210827051331314300000003",
            "name_prefix": "finn",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "finn"
            },
            "tags_all": {
              "Name": "finn"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.alb_sg",
            "module.lb.aws_lb.this",
            "module.vpc.aws_subnet.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/edu20210827051331313300000002/2dae98e1492b18b9",
            "arn_suffix": "targetgroup/edu20210827051331313300000002/2dae98e1492b18b9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/edu20210827051331313300000002/2dae98e1492b18b9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "edu20210827051331313300000002",
            "name_prefix": "edu",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "edu"
            },
            "tags_all": {
              "Name": "edu"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.alb_sg",
            "module.lb.aws_lb.this",
            "module.vpc.aws_subnet.public"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/user20210827051331311300000001/727da9387d6ec13d",
            "arn_suffix": "targetgroup/user20210827051331311300000001/727da9387d6ec13d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/user20210827051331311300000001/727da9387d6ec13d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "user20210827051331311300000001",
            "name_prefix": "user",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.lb.aws_lb.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/net/gs-hack-gs-nlb/0597734792f2647a",
            "arn_suffix": "net/gs-hack-gs-nlb/0597734792f2647a",
            "dns_name": "gs-hack-gs-nlb-0597734792f2647a.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/net/gs-hack-gs-nlb/0597734792f2647a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "gs-hack-gs-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b5f383b00c044cf"
              },
              {
                "subnet_id": "subnet-056015ee11ff0f6c2"
              }
            ],
            "subnets": [
              "subnet-03b5f383b00c044cf",
              "subnet-056015ee11ff0f6c2"
            ],
            "tags": {
              "Name": "gs-hack-gs-nlb"
            },
            "tags_all": {
              "Name": "gs-hack-gs-nlb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-08c3c16207273649a",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/net/gs-hack-gs-nlb/0597734792f2647a/70453a64c6d25e8c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210829061312864900000002/285db887c0c54ab0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/net/gs-hack-gs-nlb/0597734792f2647a/70453a64c6d25e8c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/net/gs-hack-gs-nlb/0597734792f2647a",
            "port": 5000,
            "protocol": "TCP_UDP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/net/gs-hack-gs-nlb/0597734792f2647a/bddb17b116ecce6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/edu20210829061312864900000001/12c7d4792bbf1302",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/net/gs-hack-gs-nlb/0597734792f2647a/bddb17b116ecce6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/net/gs-hack-gs-nlb/0597734792f2647a",
            "port": 5001,
            "protocol": "TCP_UDP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/net/gs-hack-gs-nlb/0597734792f2647a/2416515b80c60a46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/user20210829061312864900000003/07c6cbe9108e9c23",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:listener/net/gs-hack-gs-nlb/0597734792f2647a/2416515b80c60a46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:loadbalancer/net/gs-hack-gs-nlb/0597734792f2647a",
            "port": 5002,
            "protocol": "TCP_UDP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210829061312864900000002/285db887c0c54ab0",
            "arn_suffix": "targetgroup/finn20210829061312864900000002/285db887c0c54ab0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/finn20210829061312864900000002/285db887c0c54ab0",
            "lambda_multi_value_headers_enabled": false,
            "name": "finn20210829061312864900000002",
            "name_prefix": "finn",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP_UDP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "finn"
            },
            "tags_all": {
              "Name": "finn"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/edu20210829061312864900000001/12c7d4792bbf1302",
            "arn_suffix": "targetgroup/edu20210829061312864900000001/12c7d4792bbf1302",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/edu20210829061312864900000001/12c7d4792bbf1302",
            "lambda_multi_value_headers_enabled": false,
            "name": "edu20210829061312864900000001",
            "name_prefix": "edu",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP_UDP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "edu"
            },
            "tags_all": {
              "Name": "edu"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/user20210829061312864900000003/07c6cbe9108e9c23",
            "arn_suffix": "targetgroup/user20210829061312864900000003/07c6cbe9108e9c23",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:809247286407:targetgroup/user20210829061312864900000003/07c6cbe9108e9c23",
            "lambda_multi_value_headers_enabled": false,
            "name": "user20210829061312864900000003",
            "name_prefix": "user",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP_UDP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08e30958381480433",
            "domain": "vpc",
            "id": "eipalloc-03e250c6a0f344f74",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b55cf20f0ea7f67d",
            "private_dns": "ip-10-0-101-85.ec2.internal",
            "private_ip": "10.0.101.85",
            "public_dns": "ec2-52-21-142-57.compute-1.amazonaws.com",
            "public_ip": "52.21.142.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gs-hack-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-036fc9435c06072f7",
            "domain": "vpc",
            "id": "eipalloc-0cdef24e7dc6e6189",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07068933ff947c581",
            "private_dns": "ip-10-0-102-34.ec2.internal",
            "private_ip": "10.0.102.34",
            "public_dns": "ec2-3-214-239-210.compute-1.amazonaws.com",
            "public_ip": "3.214.239.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gs-hack-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:internet-gateway/igw-06d138d7db8fb1d93",
            "id": "igw-06d138d7db8fb1d93",
            "owner_id": "809247286407",
            "tags": {
              "Name": "gs-hack-vpc"
            },
            "tags_all": {
              "Name": "gs-hack-vpc"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e250c6a0f344f74",
            "connectivity_type": "public",
            "id": "nat-0ed1660a09671df0e",
            "network_interface_id": "eni-0b55cf20f0ea7f67d",
            "private_ip": "10.0.101.85",
            "public_ip": "52.21.142.57",
            "subnet_id": "subnet-020a59fb618168419",
            "tags": {
              "Name": "gs-hack-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdef24e7dc6e6189",
            "connectivity_type": "public",
            "id": "nat-0006460bcb7fd65b1",
            "network_interface_id": "eni-07068933ff947c581",
            "private_ip": "10.0.102.34",
            "public_ip": "3.214.239.210",
            "subnet_id": "subnet-078ab8171bc7628bf",
            "tags": {
              "Name": "gs-hack-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e9e32fd6940e29051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed1660a09671df0e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e9e32fd6940e2905",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-088177ae84d43907a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0006460bcb7fd65b1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-088177ae84d43907a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d138d7db8fb1d93",
            "id": "r-rtb-0d728b963a67738621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d728b963a6773862",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:route-table/rtb-0e9e32fd6940e2905",
            "id": "rtb-0e9e32fd6940e2905",
            "owner_id": "809247286407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed1660a09671df0e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gs-hack-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:route-table/rtb-088177ae84d43907a",
            "id": "rtb-088177ae84d43907a",
            "owner_id": "809247286407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0006460bcb7fd65b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gs-hack-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:route-table/rtb-0d728b963a6773862",
            "id": "rtb-0d728b963a6773862",
            "owner_id": "809247286407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d138d7db8fb1d93",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gs-hack-vpc-public"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-public"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad3e75ebfe5616d",
            "route_table_id": "rtb-0e9e32fd6940e2905",
            "subnet_id": "subnet-03b5f383b00c044cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01323b92d3e9a34b9",
            "route_table_id": "rtb-088177ae84d43907a",
            "subnet_id": "subnet-056015ee11ff0f6c2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824bb409d523bbf9",
            "route_table_id": "rtb-0d728b963a6773862",
            "subnet_id": "subnet-020a59fb618168419"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022997f6036c6b0d2",
            "route_table_id": "rtb-0d728b963a6773862",
            "subnet_id": "subnet-078ab8171bc7628bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:subnet/subnet-03b5f383b00c044cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03b5f383b00c044cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809247286407",
            "tags": {
              "Name": "gs-hack-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:subnet/subnet-056015ee11ff0f6c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-056015ee11ff0f6c2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809247286407",
            "tags": {
              "Name": "gs-hack-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:subnet/subnet-020a59fb618168419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-020a59fb618168419",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809247286407",
            "tags": {
              "Name": "gs-hack-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:subnet/subnet-078ab8171bc7628bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-078ab8171bc7628bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809247286407",
            "tags": {
              "Name": "gs-hack-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "gs-hack-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-08c3c16207273649a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809247286407:vpc/vpc-08c3c16207273649a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dea61806d33b55c3",
            "default_route_table_id": "rtb-00eef34795919e9a9",
            "default_security_group_id": "sg-0a05d624f06d53227",
            "dhcp_options_id": "dopt-bfbbd4c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08c3c16207273649a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00eef34795919e9a9",
            "owner_id": "809247286407",
            "tags": {
              "Name": "gs-hack-vpc"
            },
            "tags_all": {
              "Name": "gs-hack-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}